--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
                     <p>YouTube</p>
                 </div>
                 <div >
-                    <img class="image one"src="/ASSET/images.png" alt="" srcset=""><br>
+                    <img class="image"src="/ASSET/drive.png" alt="" srcset="">
                     <p>Google drive</p>
                 </div>
                 <div> <img class="image"src="/ASSET/twitter.png" alt="" srcset=""><br>
@@ -44,7 +44,7 @@
                     <p>Python.org</p>
                 </div>
                 <div>
-                   <img class="image"src="/ASSET/mro.jpg" alt="" srcset="">
+                  <img class="image"src="/ASSET/edge.jpg" alt="" srcset="">
                     <p>Microsoft edge</p>
 
                 </div>
